--- a/todo/static/todo/css/styles.css
+++ b/todo/static/todo/css/styles.css
@@ -1,5 +1,36 @@
 /*Distributed*/
 
+h1 a {
+    color: #FCA205;
+}
+h1{
+	background-color: #ffe6ff;
+}
+body 
+{
+ margin-top:30px;
+ margin-left:30px;
+ margin-right:50px;
+
+}
+
+.comment {
+    margin: 20px 0px 20px 20px;
+}
+
+table, th, td {
+	border: 1px solid black;
+}
+table { 
+
+    border-spacing: 0px;
+    border-collapse: separate;
+}
+td { 
+    padding: 5px;
+}
+
+
 ul.messages li {
 	color: green;
 	font-weight: bold;
